--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="https://banner2.cleanpng.com/20180412/kye/kisspng-python-programming-language-computer-programming-language-5acfdc3636bac7.8891188615235717662242.jpg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
