--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        I'm a Software Developer currently based in Kissimmee, Florida with 2+ years of freelance
+                        I'm a Software Developer currently based in Kissimmee, Florida with 2+ years of freelance experience
                         designing, building and delivering end to end solutions for digital products.
                     </p>
                 </div>
@@ -85,19 +85,6 @@
     <div id="skills" class="background-alt">
         <h2 class="heading">Skills & Tools</h2>
         <ul>
-            <li>JavaScript</li>
-            <li>Python</li>
-            <li>Ruby</li>
-            <li>Go</li>
-            <li>Node.js</li>
-            <li>AngularJs</li>
-            <li>React</li>
-            <li>Elixir</li>
-            <li>Java</li>
-            <li>C</li>
-            <li>C#</li>
-            <li>C++</li>
-            <li>Ruby on Rails</li>
             <li>JavaScript</li>
             <li>Python</li>
             <li>Ruby</li>
