--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div id="lead-content">
             <h1>Richard Morris</h1>
             <h2>Software Developer</h2>
-            <a href="Richard_Morris_resume.pdf" download="Richard_Morris_resume.pdf" class="btn-rounded-white">Download Resume</a>
+            <a href="Richard_Morris_Dev_Resume.pdf" download="Richard_Morris_resume.pdf" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
