--- a/index.html
+++ b/index.html
@@ -30,9 +30,7 @@
             <li>
                 <a href="#experience">Experience</a>
             </li>
-            <!-- <li>
                 <a href="#education">Education</a>
-            </li> -->
             <li>
                 <a href="#projects">Projects</a>
             </li>
@@ -74,7 +72,13 @@
                 <div class="col-md-8">
                     <p>
                         I'm a Software Developer currently based in Kissimmee, Florida with 2+ years of freelance experience
-                        designing, building and delivering end to end solutions for digital products.
+                        designing, building and delivering end to end solutions for digital products. I am a highly motivated and 
+                        technically adept Software Development and Computing Technology graduate with a proven track record 
+                        in driving operational excellence and delivering innovative solutions. Experienced in leadership roles,
+                        I have effectively optimized team performance and enhanced customer satisfaction through strategic 
+                         initiatives. Skilled in full-stack development, project management, and technical support, with 
+                         expertise in languages such as Python, Java, and JavaScript. Committed to continuous learning and 
+                         development, I bring a strong foundation in data structures, algorithms, and database management.
                     </p>
                 </div>
             </div>
